--- a/data/cancerCTCF/index.html
+++ b/data/cancerCTCF/index.html
@@ -147,7 +147,7 @@ with extra annotation (CTCF sequence motif, occupancy score, genomic annotation,
 
 
 <p><b>
-<li>High-conficence CTCF binding sites (285,467)</li> 
+<li>High-confidence CTCF binding sites (285,467)</li> 
 </b></p>
 <p style="padding-left: 48px;line-height: 2"> 
 <a href="./data/union_binding_occupancy_score_GT3.bed"><font color="#002F6C">  BED format</font></a> 
@@ -213,7 +213,7 @@ with extra annotation (CTCF sequence motif, occupancy score, genomic annotation,
 <h3 style="font-size: 22pt" id="links"><font color="#002F6C">Links</font></h3>
 <p>
 <li><a href="https://zanglab.github.io/index.htm" target="_blank">Zang lab</a></li><br> 
-<li><a href="https://www.ntziachristoslab.com/" target="_blank">Ntziachristos lab</a></li><br> 
+<li><a href="www.ntziachristoslab.com/" target="_blank">Ntziachristos lab</a></li><br> 
 <li><a href="https://github.com/zanglab/CTCF_T-ALL_code" target="_blank"> Source code at GitHub </a></li><br> 
 </p>
 
