--- a/data/cancerCTCF/index.html
+++ b/data/cancerCTCF/index.html
@@ -213,7 +213,7 @@ with extra annotation (CTCF sequence motif, occupancy score, genomic annotation,
 <h3 style="font-size: 22pt" id="links"><font color="#002F6C">Links</font></h3>
 <p>
 <li><a href="https://zanglab.github.io/index.htm" target="_blank">Zang lab</a></li><br> 
-<li><a href="www.ntziachristoslab.com/" target="_blank">Ntziachristos lab</a></li><br> 
+<li><a href="http://www.ntziachristoslab.com/" target="_blank">Ntziachristos lab</a></li><br> 
 <li><a href="https://github.com/zanglab/CTCF_T-ALL_code" target="_blank"> Source code at GitHub </a></li><br> 
 </p>
 
