--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Zhenjia is honored on <a href="https://news.virginia.edu/content/uva-honors-faculty-their-research-and-scholarship" target="_blank">the list of UVA researchers with outstanding research contributions in 2021</a>!
+		<br><br>
 		Shawn's paper in collaboration with the Hai-Hui Xue Lab is accepted to <!--<a href="https://www.nature.com/articles/s41423-020-0436-5" target="_blank">--><i><b>Nature Immunology</b></i><!--</a>-->!
 		</p>
 	</div>
@@ -748,7 +750,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: January 10, 2022</p>
+<p align="right">Last modified: January 31, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
