--- a/people.htm
+++ b/people.htm
@@ -229,6 +229,13 @@ William Franz Lamberti received his B.A. in Mathematical Statistics from The Col
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Yidan Cong joined the lab as a postdoctoral research associate in June 2021. She received her PhD in chemistry from the University of North Carolina at Chapel Hill, M.S. in data science from Northwestern University, and B.S. in chemistry from Carnegie Mellon University. Her PhD research focused on synthesizing and characterizing supersoft materials that mimic biological tissues’ mechanical and optical properties, as well as developing computational tools to quantitatively correlate materials’ structure and properties. She is excited about utilizing machine learning algorithms to tackle challenging genomics research problems.
 </p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
+<b>Shengyuan Wang, PhD</b>
+<!--<a href="mailto:npa4cn@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Shengyuan will join the lab as a postdoctoral research associate in February 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
+</p><br><br>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
@@ -565,7 +572,7 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: November 15, 2021</p>
+<p align="right">Last modified: February 7, 2022</p>
 
 </div>
 
