--- a/position.htm
+++ b/position.htm
@@ -61,6 +61,27 @@ ul.topnav li.icon {display: none;}
     text-align: left;
   }
 }
+
+.collapsible {
+  background-color: #fff;
+  color: #002F6C;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 16px;
+}
+
+.collapsible:hover {
+  background-color: #fff;
+}
+
+.content {
+  padding: 0 12px;
+  display: none;
+  overflow: hidden;
+}
 </style>
 <title>Chongzhi Zang Lab</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -73,12 +94,12 @@ ul.topnav li.icon {display: none;}
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
-  <li><a class="active" href="people.htm">People</a></li>
+  <li><a href="people.htm">People</a></li>
   <li><a href="research.htm">Research</a></li>
   <li><a href="publication.htm">Publications</a></li>
   <li><a href="software.htm">Software</a></li>
   <li><a href="teaching.htm">Teaching</a></li>
-  <li><a href="position.htm">Positions</a></li>
+  <li><a class="active" href="position.htm">Positions</a></li>
   <li><a href="contact.htm">Contact</a></li>
   <li class="icon">
     <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
@@ -114,7 +135,10 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
+<button type="button" class="collapsible">
 <h3><font color="#002F6C">Postdoctoral Research Associates (3 Positions)</font></h3>
+</button>
+<div class="content">
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -152,8 +176,12 @@ All positions are restricted and contingent on the continuation of funding. The 
 </p><p style="line-height: 1.6;">
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
+</div>
 <hr>
+<button type="button" class="collapsible">
 <h3><font color="#002F6C">Computational Biologist (1 Position)</font></h3>
+</button>
+<div class="content">
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -187,8 +215,12 @@ All positions are restricted and contingent on the continuation of funding. The 
 </p><p style="line-height: 1.6;">
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
+</div>
 <hr>
+<button type="button" class="collapsible">
 <h3><font color="#002F6C">Bioinformatics Research Scientist (1 Position)</font></h3>
+</button>
+<div class="content">
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -248,27 +280,53 @@ All positions are restricted and contingent on the continuation of funding. The 
 </p><p style="line-height: 1.6;">
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
+</div>
 <hr>
+<button type="button" class="collapsible">
 <h3><font color="#002F6C">Graduate Students</font></h3>
+</button>
+<div class="content">
 <p style="line-height: 1.6;">
 We are recruiting graduate students for research training and completing PhD thesis research in the lab. Besides research grants funded to the lab, UVA has multiple NIH T32 training grants, including Cell and Molecular Biology (CMB) and Systems and Biomolecular Data Science (SBDS), available to support eligible students in the lab. Prospective student should apply for either the <a href="https://med.virginia.edu/bims/" target="_blank">Biomedical Sciences (BIMS) graduate program</a> at the UVA School of Medicine or the <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/bme-graduate-programs" target="_blank">Biomedical Engineering (BME) graduate program</a> at the UVA School of Engineering and Applied Science. Admitted students please contact Dr. Zang for rotation opportunities.
 </p>
+</div>
 <hr>
+<button type="button" class="collapsible">
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
+</button>
+<div class="content">
 <p style="line-height: 1.6;">
 Undergraduate students are welcome to join the lab before the Third Year to get research training and research experience. Students majored in physics, mathematics, statistics, computer science or engineering with interests in biomedical research are especially welcome. To complete the training and a research project, undergraduate students are expected to devote two years including at least one full-time summer. Please contact Dr. Zang for details.
 </p><p style="line-height: 1.6;">
 Undergraduate students from outside of UVA are welcome to conduct summer research in the lab. Eligible students are encouraged to apply to the  <a href="https://med.virginia.edu/summer-research-internship-program" target="_blank">Summer Research Internship Program</a> or the <a href="https://www.nsfreu.org/howtoapply/engineering" target="_blank">NSF</a> <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">REU Program in Multi-Scale Systems Bioengineering</a>, although opportunities in the lab are not contingent upon admission to the summer programs. Please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> for inquiries.
 </p>
+</div>
 <hr>
-<h3><font color="#002F6C">Why UVA?</font></h3>
-<p style="line-height: 1.6;">
+<h3><font color="#002F6C">&nbsp;Why UVA?</font></h3>
+<p style="line-height: 1.6; padding: 12px">
 Take a look at these two videos about why we are excited to be part of the UVA community:<br>
-<a href="https://news.virginia.edu/video/why-uva-heres-why" target="_blank">"Why UVA? Here's why"</a><br>
+<a href="https://news.virginia.edu/video/why-uva-heres-why" target="_blank">"Why UVA? Here's why."</a><br>
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: November 10, 2021</p>
+<p align="right">Last modified: February 7, 2022</p>
 </div>
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 
 </body></html>
