--- a/index.htm
+++ b/index.htm
@@ -139,6 +139,18 @@ function myFunction() {
 <br>
 <br>
 <h3><font color="#002F6C">Lab News</font></h3>
+<!--<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
+		<font color="#002F6C">February 2022</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shawn's <a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank"><i><b>Nature Immunology</b></i> paper</a> is published online with press release at <a href="https://news.virginia.edu/content/uva-reveals-how-gene-mutation-boosts-cancer-risk" target="_blank"><b>UVA Today</b></a>.
+		</p>
+	</div>
+</div>-->
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
@@ -149,7 +161,7 @@ function myFunction() {
 		<p>
 		Zhenjia is honored on <a href="https://news.virginia.edu/content/uva-honors-faculty-their-research-and-scholarship" target="_blank">the list of UVA researchers with outstanding research contributions in 2021</a>!
 		<br><br>
-		Shawn's paper in collaboration with the Hai-Hui Xue Lab is accepted to <!--<a href="https://www.nature.com/articles/s41423-020-0436-5" target="_blank">--><i><b>Nature Immunology</b></i><!--</a>-->!
+		Shawn's paper in collaboration with the Hai-Hui Xue Lab is accepted to <a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank"><i><b>Nature Immunology</b></i></a>!
 		</p>
 	</div>
 </div>
@@ -750,7 +762,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: January 31, 2022</p>
+<p align="right">Last modified: February 21, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
