--- a/publication.htm
+++ b/publication.htm
@@ -61,6 +61,27 @@ ul.topnav li.icon {display: none;}
     text-align: left;
   }
 }
+
+.collapsible {
+  background-color: #fff;
+  color: #002F6C;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 18px;
+}
+
+.collapsible:hover {
+  background-color: #fff;
+}
+
+.content {
+  padding: 0 3px;
+  display: none;
+  overflow: hidden;
+}
 </style>
 <title>Chongzhi Zang Lab</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -73,9 +94,9 @@ ul.topnav li.icon {display: none;}
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
-  <li><a class="active" href="people.htm">People</a></li>
+  <li><a href="people.htm">People</a></li>
   <li><a href="research.htm">Research</a></li>
-  <li><a href="publication.htm">Publications</a></li>
+  <li><a class="active" href="publication.htm">Publications</a></li>
   <li><a href="software.htm">Software</a></li>
   <li><a href="teaching.htm">Teaching</a></li>
   <li><a href="position.htm">Positions</a></li>
@@ -130,7 +151,7 @@ Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nanc
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2021)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">Cell-specific chromatin landscape of human coronary artery resolves regulatory mechanisms of disease risk</a><br>
-Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani Hodonsky, Doris Wong, Gaelle Auguste, Katia Sol-Church, Emily A. Farber, Soumya Kundu, Anshul B. Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Bjorkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
+Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani Hodonsky, Doris Wong, Gaelle Auguste, Katia Sol-Church, Emily A. Farber, Soumya Kundu, Anshul B. Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Bjorkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">https://doi.org/10.1101/2021.06.07.447388</a> (2021)
 </p></li>
@@ -138,6 +159,16 @@ Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chan
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8+ T cells during recall responses</a><br> 
+Qiang Shan*, <u>Shengen Shawn Hu</u>*, Shaoqi Zhu, Xia Chen, Vladimir P. Badovinac, Weiqun Peng, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue</u><sup>#</sup>
+<br>
+<i><b>Nature Immunology</b></i>, doi:10.1038/s41590-022-01131-3 (2022)
+</p></li>
+<li><p><a href="https://www.nature.com/articles/s41375-021-01464-2" target="_blank">Genetic ablation of Pim1 or pharmacologic inhibition with TP-3654 ameliorates myelofibrosis in murine models</a><br> 
+Avik Dutta*, Dipmoy Nath*, Yue Yang, Bao T. Le, Mohammad Ferdous-Ur Rahman, Patrick Faughnan, <u>Zhenjia Wang</u>, Matthew Stuver, <u>Rongquan He</u>, <u>Wuwei Tan</u>, Robert E. Hutchison, Jason M. Foulks, Steven L. Warner, <u>Chongzhi Zang</u>, Golam Mohi
+<br>
+<i><b>Leukemia</b></i>, doi:10.1038/s41375-021-01464-2 (2021)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank">UTX condensation underlies its tumour-suppressive activity</a><br> 
 Bi Shi*, Wei Li*, Yansu Song*, <u>Zhenjia Wang</u>*, Rui Ju, Aleksandra Ulman, Jing Hu, Francesco Palomba, Yanfang Zhao, John Philip Le, William Jarrard, David Dimoff, Michelle A. Digman, Enrico Gratton, <u>Chongzhi Zang</u>, Hao Jiang 
 <br>
@@ -149,7 +180,7 @@ Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yu
 <i><b>Genes, Chromosomes & Cancer</b></i> 60, 808&ndash;821 (2021)
 </p></li>
 <li><p><a href="https://doi.org/10.1093/nargab/lqab022" target="_blank">BARTweb: a web server for transcriptional regulator association analysis</a><br> 
-<u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, <u>Yayi Feng</u>, <u>Ruoyao Shi</u>, Yang Chen, <u>Chongzhi Zang</u>
+<u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E. Magee, <u>Yayi Feng</u>, <u>Ruoyao Shi</u>, Yang Chen, <u>Chongzhi Zang</u>
 <br>
 <i><b>NAR Genomics and Bioinformatics</b></i> 3(2), lqab022 (2021)
 </p></li>
@@ -241,12 +272,17 @@ André L. Martins, Ninad M. Walavalkar, Warren D. Anderson, <u>Chongzhi Zang</u>
 Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo Li, Xiaohui Shi, Binbin Wang, Jingyu Fan, <u>Celina Shih</u>, Myles Brown, <u>Chongzhi Zang</u><sup>#</sup>, X. Shirley Liu<sup>#</sup><br>
 <i><b>Cancer Research</b></i> 77, e19&ndash;e22 (2017)
 </p></li>
+</ol>
+<hr>
+<button type="button" class="collapsible">
+<p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
+</button>
+<div class="content">
+<ol style="padding-left: 24px; line-height: 1.6;" start="26">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
-</p></li>
-<p><font color="#002F6C"><b>Prior to joining UVA</b></font></p>
-<li><p>
+</p></li><li><p>
 <a href="https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkw983" target="_blank">Cistrome Data Browser: an integrated data portal for ChIP-Seq and chromatin accessibility data in human and mouse</a><br>
 Shenglin Mei*, Qian Qin*, Qiu Wu*, Hanfei Sun, Rongbin Zheng, <u>Chongzhi Zang</u>, Muyuan Zhu, Jiaxin Wu, Xiaohui Shi, Len Taing, Tao Liu, Myles Brown, Clifford A. Meyer<sup>#</sup>, X. Shirley Liu<sup>#</sup><br>
 <i><b>Nucleic Acids Research</b></i> 45 (D1), D658&ndash;D662 (2016) 
@@ -354,9 +390,27 @@ Kairong Cui*, <u>Chongzhi Zang</u>*, Tae-Young Roh, Dustin E. Schones, Richard W
 <a href="http://www.nature.com/ng/journal/v40/n7/full/ng.154.html" target="_blank">Combinatorial patterns of histone acetylations and methylations in the human genome</a><br>
 Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, Artem Barski, Suresh Cuddapah, Kairong Cui, Tae-Young Roh, Weiqun Peng, Michael Q. Zhang, Keji Zhao<br>
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
-</p></li></ol>
+</p></li>
+</ol>
+</div>
 <hr>
-<p align="right">Last modified: October 24, 2021</p>
+<p align="right">Last modified: February 21, 2022</p>
 </div>
 
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 </body></html>
