--- a/publication.htm
+++ b/publication.htm
@@ -159,7 +159,7 @@ Adam W. Turner*, <u>Shengen Shawn Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma,
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8+ T cells during recall responses</a><br> 
+<li><p><a href="https://www.nature.com/articles/s41590-022-01131-3" target="_blank">Tcf1 preprograms the mobilization of glycolysis in central memory CD8<sup>+</sup> T cells during recall responses</a><br> 
 Qiang Shan*, <u>Shengen Shawn Hu</u>*, Shaoqi Zhu, Xia Chen, Vladimir P. Badovinac, Weiqun Peng, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue</u><sup>#</sup>
 <br>
 <i><b>Nature Immunology</b></i>, doi:10.1038/s41590-022-01131-3 (2022)
@@ -390,6 +390,10 @@ Kairong Cui*, <u>Chongzhi Zang</u>*, Tae-Young Roh, Dustin E. Schones, Richard W
 <a href="http://www.nature.com/ng/journal/v40/n7/full/ng.154.html" target="_blank">Combinatorial patterns of histone acetylations and methylations in the human genome</a><br>
 Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, Artem Barski, Suresh Cuddapah, Kairong Cui, Tae-Young Roh, Weiqun Peng, Michael Q. Zhang, Keji Zhao<br>
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
+</p></li><li><p>
+<a href="http://wulixb.iphy.ac.cn/EN/Y2006/V55/I1/299" target="_blank">Fluorescence measurement and acoustic diagnostics of plasma channels in air</a><br>
+Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chong-Zhi Zang</u>, Zhan Jin, Zhao-Hua Wang, Zhi-Yi Wei<br>
+<i><b>Acta Physica Sinica</b></i> 55, 299&ndash;303 (2006)
 </p></li>
 </ol>
 </div>
