--- a/publication.htm
+++ b/publication.htm
@@ -375,11 +375,11 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Kairong Cui*, Dustin E. Schones, Artem Bars
 Chunyuan Jin*, <u>Chongzhi Zang</u>*, Gang Wei, Kairong Cui, Weiqun Peng, Keji Zhao<sup>#</sup>, Gary Felsenfeld<sup>#</sup><br>
 <i><b>Nature Genetics</b></i> 41, 941&ndash;945 (2009)
 </p></li><li><p>
-<a href="http://www.cell.com/immunity/abstract/S1074-7613(09)00235-0" target="_blank">Genome-wide analysis of histone methylations reveals chromatin state-based regulation of gene transcription and function of memory CD8+ T cells</a><br>
+<a href="http://www.cell.com/immunity/abstract/S1074-7613(09)00235-0" target="_blank">Genome-wide analysis of histone methylations reveals chromatin state-based regulation of gene transcription and function of memory CD8<sup>+</sup> T cells</a><br>
 Yasuto Araki*, Zhibin Wang*, <u>Chongzhi Zang</u>, William H. Wood, Dustin Schones, Kairong Cui, Tae-Young Roh, Brad Lhotsky, Robert P. Wersto, Weiqun Peng, Kevin G. Becker, Keji Zhao<sup>#</sup>, Nan-ping Weng<sup>#</sup><br>
 <i><b>Immunity</b></i> 30, 912&ndash;925 (2009)
 </p></li><li><p>
-<a href="http://www.cell.com/immunity/abstract/S1074-7613(08)00555-4" target="_blank">Global mapping of H3K4me3 and H3K27me3 reveals specificity and plasticity in lineage fate determination of differentiating CD4+ T cells</a><br>
+<a href="http://www.cell.com/immunity/abstract/S1074-7613(08)00555-4" target="_blank">Global mapping of H3K4me3 and H3K27me3 reveals specificity and plasticity in lineage fate determination of differentiating CD4<sup>+</sup> T cells</a><br>
 Gang Wei*, Lai Wei*, Jinfang Zhu, <u>Chongzhi Zang</u>, Jane Hu-Li, Zhengju Yao, Kairong Cui, Yuka Kanno, Tae-Young Roh, Wendy Watford, Dustin E. Schones, Weiqun Peng, Hong-wei Sun, William E. Paul, John J. O’Shea<sup>#</sup>, Keji Zhao<sup>#</sup><br>
 <i><b>Immunity</b></i> 30, 155&ndash;167 (2009)
 </p></li><li><p>
@@ -391,7 +391,7 @@ Kairong Cui*, <u>Chongzhi Zang</u>*, Tae-Young Roh, Dustin E. Schones, Richard W
 Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, Artem Barski, Suresh Cuddapah, Kairong Cui, Tae-Young Roh, Weiqun Peng, Michael Q. Zhang, Keji Zhao<br>
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li><li><p>
-<a href="http://wulixb.iphy.ac.cn/EN/Y2006/V55/I1/299" target="_blank">Fluorescence measurement and acoustic diagnostics of plasma channels in air</a><br>
+<a href="https://wulixb.iphy.ac.cn/en/article/doi/10.7498/aps.55.299" target="_blank">Fluorescence measurement and acoustic diagnostics of plasma channels in air</a><br>
 Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chong-Zhi Zang</u>, Zhan Jin, Zhao-Hua Wang, Zhi-Yi Wei<br>
 <i><b>Acta Physica Sinica</b></i> 55, 299&ndash;303 (2006)
 </p></li>
