--- a/research.htm
+++ b/research.htm
@@ -147,7 +147,8 @@ function myFunction() {
 <hr>
 <h3><font color="#002F6C">News Releases</font></h3>
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
-<li><a href="https://news.virginia.edu/content/scientists-reveal-how-sleeping-immune-cells-wake-confront-familiar-foes" target="_blank">Scientists Reveal How Sleeping Immune Cells 'Wake' to Confront Familiar Foes</a>. <!--UVA Today. -->February 24, 2022</li>
+<li><a href="https://news.virginia.edu/content/scientists-reveal-how-sleeping-immune-cells-wake-confront-familiar-foes" target="_blank">Scientists Reveal How Sleeping Immune Cells 'Wake' to Confront Familiar Foes</a>. <!--UVA Today. -->February 23, 2022</li>
+<li><a href="https://news.virginia.edu/content/uva-reveals-how-gene-mutation-boosts-cancer-risk" target="_blank">UVA Reveals How Gene Mutation Boosts Cancer Risk</a>. <!--UVA Today. -->November 9, 2021</li>
 <li><a href="https://news.virginia.edu/content/uva-develops-new-tools-battle-cancer-advance-genomics-research" target="_blank">UVA Develops New Tools to Battle Cancer, Advance Genomics Research</a>. <!--UVA Today. -->May 25, 2021</li>
 <li><a href="https://news.virginia.edu/content/uva-honors-distinguished-researchers-virtual-awards-event" target="_blank">UVA Honors Distinguished Researchers at Virtual Awards Event</a>. <!--UVA Today. -->January 29, 2021</li>
 <li><a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank">Cancer’s Dangerous Renovations to Our Chromosomes Revealed</a>. <!--UVA Today. -->October 26, 2020</li>
