--- a/index.htm
+++ b/index.htm
@@ -116,7 +116,7 @@ function myFunction() {
       <img src="images/1488566891987_67648.jpg">
     </li>
     <li>
-      <img src="images/20210814.jpg">
+      <img src="images/20210815_2.jpg">
     </li>
     <li>
       <img src="images/1488567032192_666768.jpg">
