--- a/people.htm
+++ b/people.htm
@@ -227,7 +227,7 @@ William Franz Lamberti received his B.A. in Mathematical Statistics from The Col
 <b>Shengyuan Wang, PhD</b>
 <!--<a href="mailto:npa4cn@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Shengyuan joined the lab as a postdoctoral research associate in February 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
+Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
@@ -277,7 +277,7 @@ Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<h4><font color="#002F6C">Class of 2022</font></h4>
+<!--<h4><font color="#002F6C">Class of 2022</font></h4>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
 <b>Benjamin Ke</b>
@@ -299,7 +299,7 @@ Emilie Neulen is a Biology major with a possible minor in German on the pre-med 
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
 </p><br><br>
-<h4><font color="#002F6C">Class of 2024</font></h4>
+<!--<h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/caitlin_mcintyre.jpg" style="width:180px">
 <b>Caitlin McIntyre</b>
@@ -309,12 +309,12 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 </p><br><br>
 <h4><font color="#002F6C">Class of 2025</font></h4>
 <p style="line-height: 1.6;">
-<!--<img align="right" src="images/ivory_tang.jpg" style="width:180px">-->
+<img align="right" src="images/ivory_tang.jpg" style="width:180px">
 <b>Ivory Tang</b>
-<!--<a href="mailto:bjm7vv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:bjm7vv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Ivory Tang (Class of 2025).-->
-</p><br><br>
+Ivory Tang (Class of 2025).
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">High School Student</font></h3>
 <p style="line-height: 1.6;">
@@ -563,7 +563,7 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: February 28, 2022</p>
+<p align="right">Last modified: March 6, 2022</p>
 
 </div>
 
