--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">March 2022</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Hongpan, Yidan, and Billy each presents a poster at Cold Spring Harbor Meeting on Systems Biology: Global Regulation of Gene Expression.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">February 2022</font>
 		</p>
 	</div>
@@ -762,7 +774,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: February 24, 2022</p>
+<p align="right">Last modified: March 10, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
