--- a/people.htm
+++ b/people.htm
@@ -324,6 +324,13 @@ Ivory Tang (Class of 2025).
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
 </p><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/katherine_zhang.jpg" style="width:180px">
+<b>Katherine Zhang</b>
+<!--<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Katherine is currently a student at Thomas Jefferson High School for Science and Technology (class of 2024) in Virginia. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
+</p><br><br><br>
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
 <h4><font color="#002F6C">Postdoctoral Associates</font></h4>
@@ -397,6 +404,28 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 		<td>MS in Biomedical Engineering</td>
 		<td>08/2018&ndash;12/2019</td>
 		<td></td>
+	</tr>
+</table>
+<br>
+<h4><font color="#002F6C">Research Assistants</font></h4>
+<table id="alumni">
+	<tr>
+		<th>Name</th>
+		<th>Background</th>
+		<th>Time at Lab</th>
+		<th>Current Position</th>
+	</tr>
+	<tr>
+		<td><a href="https://marvinquiet.github.io/" target="_blank"><b>Wenjing Ma</b></a></td>
+		<td>MS in Computer Science, Beijing University of Posts and Telecommunications</td>
+		<td>08/2018&ndash;06/2019</td>
+		<td>PhD Student in Computer Science and Informatics (BMI track), Emory University</td>
+	</tr>
+	<tr>
+		<td><b>Yiren Wang</b></td>
+		<td>BS in Astronomy, Peking University</td>
+		<td>07/2017&ndash;06/2018</td>
+		<td>Graduate Student in Statistics, Columbia University</td>
 	</tr>
 </table>
 <br>
@@ -494,28 +523,6 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 	</tr>
 </table>
 <br>
-<h4><font color="#002F6C">Research Assistants</font></h4>
-<table id="alumni">
-	<tr>
-		<th>Name</th>
-		<th>Background</th>
-		<th>Time at Lab</th>
-		<th>Current Position</th>
-	</tr>
-	<tr>
-		<td><a href="https://marvinquiet.github.io/" target="_blank"><b>Wenjing Ma</b></a></td>
-		<td>MS in Computer Science, Beijing University of Posts and Telecommunications</td>
-		<td>08/2018&ndash;06/2019</td>
-		<td>PhD Student in Computer Science and Informatics (BMI track), Emory University</td>
-	</tr>
-	<tr>
-		<td><b>Yiren Wang</b></td>
-		<td>BS in Astronomy, Peking University</td>
-		<td>07/2017&ndash;06/2018</td>
-		<td>Graduate Student in Statistics, Columbia University</td>
-	</tr>
-</table>
-<br>
 <h4><font color="#002F6C">Visting Scholars and Students</font></h4>
 <table id="alumni">
 	<tr>
@@ -563,7 +570,7 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: March 6, 2022</p>
+<p align="right">Last modified: March 18, 2022</p>
 
 </div>
 
