--- a/people.htm
+++ b/people.htm
@@ -316,7 +316,7 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 Ivory Tang (Class of 2025).
 </p><br><br>-->
 <hr>
-<h3><font color="#002F6C">High School Student</font></h3>
+<h3><font color="#002F6C">High School Students</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/sonnet_xu.jpg" style="width:180px">
 <b>Sonnet Xu</b>
