--- a/people.htm
+++ b/people.htm
@@ -185,24 +185,26 @@ Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a><br>
 Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><br>
 <a href="https://med.virginia.edu/faculty/faculty-listing/cz3d/" target="_blank">School of Medicine faculty profile</a><br>
 <a href="https://engineering.virginia.edu/faculty/chongzhi-zang" target="_blank">School of Engineering faculty profile</a><br>
-<a href="CV_chongzhi_zang.pdf" target="_blank">Curriculum Vitae</a> <a href="https://orcid.org/0000-0003-4812-3627" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a>
+<a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;">Google Scholar profile</a><br>
+<a href="https://orcid.org/0000-0003-4812-3627" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.2em;" alt="ORCID iD icon">ORCID profile</a><br>
+<a href="CV_chongzhi_zang.pdf" target="_blank">Curriculum Vitae (pdf)</a> 
 </p>
-<p style="width: 640px; line-height: 1.6;" align="left">
-Dr. Chongzhi Zang is an Assistant Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA. He is also a faculty member of the UVA Cancer Center and the UVA Data Science Institute. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Prior to joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in cancer epigenomics. His research focuses on algorithm development for high-throughput genomic data analytics and integrative modeling of gene regulatory networks in mammalian cell systems.
+<p style="width: 900px; line-height: 1.6;" align="left">
+Dr. Chongzhi Zang is an Assistant Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA. He is also a faculty member of the UVA Comprehensive Cancer Center. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on algorithm development for high-throughput genomic data analysis and integrative modeling of gene regulatory networks in mammalian cell systems.
 </p><br>
 <hr>
 <h3><font color="#002F6C">Research Scientists</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/zhenjia_wang.jpg" style="width:180px">
 <b>Zhenjia Wang, PhD</b>
-<a href="mailto:zhenjia@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:zhenjia@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=-mxk13sAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhenjia joined the lab as a postdoctoral research associate in January 2017 and have been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b>
-<a href="mailto:sh8tv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:sh8tv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=JwXm75kAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Dr. Sheng'en Shawn Hu becomes a research scientist after postdoctoral training in the lab. Before joining UVA in November 2017, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
 </p><br><br>
@@ -211,21 +213,21 @@ Dr. Sheng'en Shawn Hu becomes a research scientist after postdoctoral training i
 <p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
 <b>Qingying Chen, PhD</b>
-<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:jkx9nz@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=u-N8u08AAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/billy_lamberti.jpg" style="height:180px">
 <a href="https://www.billyflamberti.com" target="_blank"><b>William F. Lamberti, PhD</b></a>
-<a href="mailto:william.f.lamberti@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="mailto:william.f.lamberti@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=nqqk3EgAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA, he received his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University where he was a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems.  He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
+William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA in January 2021, he received his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University where he was a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems. He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
 <b>Shengyuan Wang, PhD</b>
-<!--<a href="mailto:npa4cn@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
+<!--<a href="mailto:npa4cn@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--> <a href="https://scholar.google.com/citations?user=o_XEptEAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
 </p><br><br>
@@ -320,7 +322,7 @@ Ivory Tang (Class of 2025).
 <p style="line-height: 1.6;">
 <img align="right" src="images/sonnet_xu.jpg" style="width:180px">
 <b>Sonnet Xu</b>
-<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<!--<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
 </p><br><br><br>
@@ -570,7 +572,7 @@ Katherine is currently a student at Thomas Jefferson High School for Science and
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: March 18, 2022</p>
+<p align="right">Last modified: March 20, 2022</p>
 
 </div>
 
