--- a/people.htm
+++ b/people.htm
@@ -206,7 +206,7 @@ Zhenjia joined the lab as a postdoctoral research associate in January 2017 and 
 <b>Sheng'en Shawn Hu, PhD</b>
 <a href="mailto:sh8tv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=JwXm75kAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Dr. Sheng'en Shawn Hu becomes a research scientist after postdoctoral training in the lab. Before joining UVA in November 2017, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
+Dr. Sheng'en Shawn Hu is a research scientist after postdoctoral training in the lab. Before joining UVA in November 2017, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Postdoctoral Associates</font></h3>
