--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Dr. Shengyuan Wang joins the lab as Postdoctoral Research Associate. Welcome Shengyuan!
+		<br><br>
 		Hongpan, Yidan, and Billy each presents a poster at Cold Spring Harbor Meeting on Systems Biology: Global Regulation of Gene Expression.
 		</p>
 	</div>
@@ -774,7 +776,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: March 10, 2022</p>
+<p align="right">Last modified: March 25, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
