--- a/teaching.htm
+++ b/teaching.htm
@@ -89,7 +89,12 @@ ul.topnav li.icon {display: none;}
 <hr>
 <h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
 <p style="line-height: 1.6;">
-<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a></p>
+<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
+</p>
+<hr>
+<h3><font color="#002F6C">BIOC 8014: Chromatin</font></h3>
+<p style="line-height: 1.6;">
+	Spring 2022 Lecture: Super-enhancers and transcriptional condensates. <a href="slides/BIOC8014_chromatinII_week6.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
 <h3><font color="#002F6C">BIOC 8145: Bioinformatics and Functional Analysis of Genomes</font></h3>
@@ -122,7 +127,7 @@ ul.topnav li.icon {display: none;}
 <a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
 </p>
 <hr>
-<p align="right">Last modified: December 16, 2021</p>
+<p align="right">Last modified: May 4, 2022</p>
 </div>
 
 </body></html>
