--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">May 2022</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Hongpan and Shawn's paper in collaboration with the Tae-Hee Kim Lab is accepted to <i><b>Nature Communications</b></i>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">April 2022</font>
 		</p>
 	</div>
@@ -788,7 +800,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 10, 2022</p>
+<p align="right">Last modified: May 6, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
